--- a/templates/faq.html
+++ b/templates/faq.html
@@ -41,12 +41,12 @@
                 🧾 How do I add a deal?
             </summary>
             <div class="mt-2 text-gray-700">
-                You can submit a deal in four ways:
+                <span class="font-bold">You will be able to submit a deal in four ways:</span>
                 <ul class="list-disc ml-5 space-y-1">
-                    <li>Paste a product link</li>
-                    <li>Upload a receipt photo</li>
-                    <li>Sync with a proof-of-purchase API (coming soon)</li>
-                    <li>Enter it manually</li>
+                    <li>Enter it manually (current)</li>
+                    <li>Paste a product link (current but unreliable)</li>
+                    <li>Upload a receipt photo (in development)</li>
+                    <li>Sync with a proof-of-purchase API (in development)</li>
                 </ul>
             </div>
         </details>
